@@ -1,5 +1,9 @@
 2003-12-16 Damien Sandras  <dsandras@seconix.com>
 
+	* src/druid.cpp: Fixed compilation error before Kilian sees it!
+	
+2003-12-16 Damien Sandras  <dsandras@seconix.com>
+
 	* NEWS: Updated with latest features and old forgotten features.
 	
 	* src/config.cpp, src/endpoint.cpp, src/endpoint.h, src/lid.cpp,
